# python-project-49

./: .codeclimate.yml  .gitignore  README.md  makefile  pyproject.toml  setup.cfg
brain_games/: .codeclimate  __init__.py  cli.py  engine.py  even.py  games.py  launch.py
brain_games/games/: __init__.py  calc.py  even.py  gcd.py  logic.py  prime.py  progression.py
brain_games/scripts/: __init__.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
